overflow bugs fixed

--- a/src/pathFinding/node.css
+++ b/src/pathFinding/node.css
@@ -7,6 +7,7 @@
 
 .row {
   height: 2em;
+  overflow: hidden;
 }
 
 .visited {
